# asgi-middleware-static-file

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  MANIFEST.in  README.md  README.rst  demo_pure_asgi.py  demo_quart.py  publish_to_pypi.sh  pyproject.toml  setup.cfg  setup.py  test_asgi_middleware_path.py  test_secure.py
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  check-lint.yaml  check-pre-commit.yml  check-pytest.yaml  main.yaml  main.yml  release-pypi.yaml
asgi_middleware_static_file/: __init__.py  core.py
example/: demo_pure_asgi.py  demo_quart.py  example_pure_asgi.py  example_quart.py  example_wsgi_app.py
example/django_example/django_example/: asgi.py  settings.py  urls.py  wsgi.py
example/example_django/: RunOnASGI.sh
example/example_django/example_django/: asgi.py  settings.py  urls.py  wsgi.py
requirements/: base.txt  ci.txt  dev.txt  pypi.txt  test.txt
requirements.d/: base.txt  dev.txt  mypy.txt
static/: DEMO
tests/: asgi_test_kit.py  test_asgi_middleware_path.py  test_param_parser.py  test_secure.py  test_with_mock_app.py
tests/static/: gbk.txt  utf8-file.txt
