[build-system]
# https://peps.python.org/pep-0621
# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ASGIMiddlewareStaticFile"
description = "ASGI Middleware for serving Static File."
readme = "README.md"
requires-python = ">=3.7"
license-files = ["LICENSE"]
authors = [{ name = "Rex Zhang" }, { email = "rex.zhang@gmail.com" }]
keywords = ["staticfile", "middleware", "asgi", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dynamic = ["version", "dependencies"]

[project.urls]
homepage = "https://github.com/rexzhang/asgi-middleware-static-file"
documentation = "https://github.com/rexzhang/asgi-middleware-static-file/blob/main/README.md"
repository = "https://github.com/rexzhang/asgi-middleware-static-file"
changelog = "https://github.com/rexzhang/asgi-middleware-static-file/blob/main/README.md#history"

[tool.setuptools]
packages = ["asgi_middleware_static_file"]

[tool.setuptools.dynamic]
version = { attr = "asgi_middleware_static_file.VERSION" }
dependencies = { file = "requirements/base.txt" }

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--cov=asgi_middleware_static_file --cov-report html"
asyncio_mode = "auto"

[tool.isort]
profile = "black"
