# https://peps.python.org/pep-0621
# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[project]
name = "ASGIMiddlewareStaticFile"
description = "ASGI Middleware for serving Static File."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
authors = [{ name = "Rex Zhang" }, { email = "rex.zhang@gmail.com" }]
keywords = ["staticfile", "middleware", "asgi", "asyncio"]
classifiers = ["Development Status :: 4 - Beta", "Topic :: Software Development :: Libraries :: Python Modules"]

dynamic = ["version"]

dependencies = ["aiofiles>=25.1.0", "asgiref"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-asyncio"]
mypy = ["mypy", "types-aiofiles"]
pypi = ["build", "wheel", "twine"]

dev = ["ASGIMiddlewareStaticFile[test]", "ASGIMiddlewareStaticFile[mypy]", "ASGIMiddlewareStaticFile[pypi]"]

[project.urls]
homepage = "https://github.com/rexzhang/asgi-middleware-static-file"
documentation = "https://github.com/rexzhang/asgi-middleware-static-file/blob/main/README.md"
repository = "https://github.com/rexzhang/asgi-middleware-static-file"
changelog = "https://github.com/rexzhang/asgi-middleware-static-file/blob/main/README.md#history"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["asgi_middleware_static_file"]

[tool.setuptools.dynamic]
version = { attr = "asgi_middleware_static_file.__version__" }

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--cov=asgi_middleware_static_file --cov-report html"
asyncio_mode = "auto"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
files = ["asgi_middleware_static_file/"]

strict = true
strict_bytes = true

warn_return_any = true
warn_unused_configs = true
